--- a/.github/bors.toml
+++ b/.github/bors.toml
@@ -1,6 +1,7 @@
 status = [
     "Linux (runtime/cpp)",
     "CentOS (7, runtime/cpp)",
+    "CentOS Stream (8, runtime/cpp)",
     "Ubuntu (18.04, runtime/cpp)",
     "Ubuntu (18.04, codegen/cpp/fletchgen)",
     "Ubuntu (20.04, runtime/cpp)",
