--- a/.github/workflows/assets.yml
+++ b/.github/workflows/assets.yml
@@ -100,6 +100,50 @@ jobs:
           asset_name: ${{ steps.rpm.outputs.name }}
           asset_content_type: application/octet-stream
 
+  centos-stream:
+    name: CentOS Stream
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        version:
+          - 8
+        source:
+          - runtime/cpp
+    container: quay.io/centos/centos:stream${{ matrix.version }}
+    steps:
+      - name: Install dependencies
+        run: |
+          yum install -y epel-release
+          yum install -y curl make rpm-build gcc-c++ git
+      - name: Install CMake
+        run: curl -L https://github.com/Kitware/CMake/releases/download/v$CMAKE_VERSION/cmake-$CMAKE_VERSION-Linux-x86_64.tar.gz | tar xz --strip-components=1 -C /usr
+      - name: Install Apache Arrow
+        run: |
+          yum install -y https://apache.jfrog.io/artifactory/arrow/centos/$(cut -d: -f5 /etc/system-release-cpe)-stream/apache-arrow-release-latest.rpm
+          yum install -y arrow-devel-$ARROW_VERSION-1.el${{ matrix.version }}
+      - uses: actions/checkout@v2
+      - name: Configure
+        run: cmake ${{ matrix.source }} -DCMAKE_BUILD_TYPE=Release
+      - name: Package
+        run: make -j package
+      - id: rpm
+        run: echo "##[set-output name=name;]$(ls fletch*.rpm)"
+      - name: Install
+        run: |
+          yum remove -y arrow-devel
+          yum autoremove -y
+          yum localinstall -y ./${{ steps.rpm.outputs.name }}
+      - name: Upload rpm
+        uses: actions/upload-release-asset@v1
+        if: ${{ github.event_name == 'release' && github.event.action == 'created' }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ github.event.release.upload_url }}
+          asset_path: ${{ steps.rpm.outputs.name }}
+          asset_name: ${{ steps.rpm.outputs.name }}
+          asset_content_type: application/octet-stream
+
   ubuntu:
     name: Ubuntu
     strategy:
